<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/login_card_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_top_linear">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="10"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_side"
                    app:srcCompat="@drawable/ic_arrow_right_bold"
                    android:focusable="true"
                    android:onClick="skipSignIn"/>


            </LinearLayout>

            <TextView
                android:id="@+id/labelLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_side"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_size_login_label"
                android:textStyle="bold" />

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:nextFocusLeft="@id/login"
                android:nextFocusUp="@id/login"
                android:textSize="@dimen/text_size_login_input" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_login_input" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/colorAccent"
            android:text="@string/sign_in_upper"
            android:textColor="@android:color/white"
            android:focusable="true"
            android:onClick="signIn"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top"
            android:alpha="0.7"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_account"
                android:layout_marginRight="4dp"/>

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up_low"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:focusable="true"
                android:onClick="signUpButtonClick"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
