<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/login_card_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/colorAccent"
    android:focusable="true"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_top_linear">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="10"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/closeRegisterCard"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_side"
                    app:srcCompat="@drawable/ic_clear_white_24dp"
                    android:onClick="closeRegisterCardClick"
                    android:focusable="true"/>


            </LinearLayout>

            <TextView
                android:id="@+id/labelLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_side"
                android:text="REGISTER"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_size_login_label"
                android:textStyle="bold" />

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/loginRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:nextFocusLeft="@id/login"
                android:nextFocusUp="@id/login"
                android:textSize="@dimen/text_size_login_input" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_login_input" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/StyledTilEditTextFloatingLabel">

            <EditText
                android:id="@+id/repeatPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_r"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_login_input" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_side"
            android:layout_marginRight="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_side"
            android:background="@android:color/white"
            android:text="@string/sign_up_upper"
            android:textColor="@color/colorAccent"
            android:focusable="true"
            android:onClick="signUp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
